fix the markdown <em> in all the popular posts

--- a/content/posts/2018-12-06-maybes.md
+++ b/content/posts/2018-12-06-maybes.md
@@ -148,6 +148,8 @@ And don&#8217;t take this personally. The intention is probably one of being nic
 
 It&#8217;s like how those parents who choose not to vaccinate their kids are actually putting everyone&#8217;s kids at risk: we either benefit from [herd immunity][4], or we are vulnerable to exposure.
 
+{{< mailinglist >}}
+
 Writing this post is my entrée into the protocol of directing, so I&#8217;m treading lightly. I know anti-_Maybes_-ism rubs up against a lot of people&#8217;s edges, and results in some projection and defensive angst. Some people are gonna get mad.
 
 So, with that all said, I&#8217;ll leave it up to you to navigate what Directing might look like in your life. 
