style quotes, change body text color, and make tons of other small tweaks

--- a/content/posts/2019-04-08-now-april-2019.md
+++ b/content/posts/2019-04-08-now-april-2019.md
@@ -9,6 +9,7 @@ categories:
 tags:
   - Sam
 format: link
+link: https://www.samuelkillermann.com/now/2019-april/
 
 ---
 I updated samuelkillermann.com/now with the two main projects I&#8217;m working on right meow.
