fix a ton of broken links

--- a/content/posts/2013-11-18-2-5-weeks-and-15000-words.md
+++ b/content/posts/2013-11-18-2-5-weeks-and-15000-words.md
@@ -35,6 +35,6 @@ Now I&#8217;m going to sleep for a couple days,
 
 sKKKKZZZZZZZZZZ
 
- [1]: //welcome/ "Welcome to Sam Killermann’s Thought / Day"
- [2]: //us-vs-them/ "Making a Bigger “Us” and a Smaller “Them”"
- [3]: //hiding-behind-a-keyboard/ "Hiding Behind a Keyboard: The Terror of the Unknown"
+ [1]: /welcome/ "Welcome to Sam Killermann’s Thought / Day"
+ [2]: /us-vs-them/ "Making a Bigger “Us” and a Smaller “Them”"
+ [3]: /hiding-behind-a-keyboard/ "Hiding Behind a Keyboard: The Terror of the Unknown"
